<resources>
    <string name="app_name">Fingerprint</string>
    <string name="finger_authentication">Finger Authentication</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="image">image</string>
    <string name="place_your_finger_on_the_scanner">Place Your finger on the Scanner</string>
    <string name="user_image">user image</string>
    <string name="verify">Verify</string>
    <string name="username">Username</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="result">Result</string>
    <string name="next">Next</string>
</resources>
